Api para buscar vendas e venda individual
