# app/Models/Sale.php
@@ -5,6 +5,7 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\SoftDeletes;
+use App\Models\Product;
 
 class Sale extends Model
 {
@@ -13,4 +14,9 @@ class Sale extends Model
     protected $primaryKey = 'sale_id';
     public $incrementing = false;
     protected $keyType = 'string';
+
+    public function products()
+    {
+        return $this->belongsToMany(Product::class, 'product_sales', 'sale_id', 'product_id');
+    }
 }
